--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "heroicons": "^2.0.18",
     "jsonwebtoken": "^9.0.1",
     "next": "^13.4.1",
     "react": "^18.2.0",
