--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookie": "^0.5.0",
     "heroicons": "^2.0.18",
     "jsonwebtoken": "^9.0.1",
     "next": "^13.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "serialize": "^0.1.3",
     "ui": "*"
   },
   "devDependencies": {
