--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,8 @@
     "cookie": "^0.5.0",
     "heroicons": "^2.0.18",
     "jsonwebtoken": "^9.0.1",
+    "mongodb": "^5.8.1",
+    "multer": "^1.4.5-lts.1",
     "next": "^13.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
